# Moose

./: .gitignore  LICENSE  Moose.cabal  README.md
executables/mini/: Main.hs
executables/ships/: Main.hs
executables/triangles/: Main.hs  Shaders.hs
src/: Main.hs
src/Moose/: Boilerplate.hs  GlHelp.hs
