name:                Moose
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Erik
maintainer:          erik.svedang@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Moose.Boilerplate
                     , Moose.GlHelp
  build-depends:       GLFW-b
                     , GLUtil >= 0.8.2
                     , OpenGL >= 2.9.2.0
                     , base >=4.7 && <4.8
                     , OpenGLRaw == 1.5.0.0
  default-language:    Haskell2010                   
  hs-source-dirs:    src

executable Mini
  main-is:             executables/mini/Main.hs
  -- other-modules:       
  build-depends:       GLFW-b
                     , GLUtil >= 0.8.2
                     , OpenGL >= 2.9.2.0
                     , base >=4.7 && <4.8
                     , OpenGLRaw == 1.5.0.0
                     , Moose
  hs-source-dirs:      
  default-language:    Haskell2010
                                             
executable Triangles
  main-is:             executables/triangles/Main.hs
  -- other-modules:       
  build-depends:       GLFW-b
                     , GLUtil >= 0.8.2
                     , OpenGL >= 2.9.2.0
                     , base >=4.7 && <4.8
                     , OpenGLRaw == 1.5.0.0
                     , Moose
  hs-source-dirs:      
  default-language:    Haskell2010


                       