name:                Moose
version:             0.1.0.0
license-file:        LICENSE
author:              Erik Svedäng
maintainer:          erik.svedang@gmail.com
build-type:          Simple
cabal-version:       >=1.10
-- synopsis:            
-- description:         
-- license:             
-- copyright:           
-- category:            
-- extra-source-files:  

library
  exposed-modules:     Moose.Boilerplate
                     , Moose.GlHelp
  build-depends:       GLFW-b
                     , GLUtil >= 0.8.2
                     , OpenGL >= 2.9.2.0
                     , OpenGLRaw == 1.5.0.0
                     , base >=4.7 && <4.8
                     , bytestring >= 0.10.4.0
                     , linear >= 1.18.1
  default-language:    Haskell2010                   
  hs-source-dirs:      src

executable Mini
  hs-source-dirs:      executables/mini/
  main-is:             Main.hs     
  build-depends:       GLFW-b
                     , GLUtil >= 0.8.2
                     , Moose
                     , OpenGL >= 2.9.2.0
                     , OpenGLRaw == 1.5.0.0
                     , base >=4.7 && <4.8
                     , bytestring >= 0.10.4.0
                     , linear >= 1.18.1
  default-language:    Haskell2010
                                             
executable Triangles
  hs-source-dirs:      executables/triangles/
  main-is:             Main.hs
  build-depends:       GLFW-b
                     , GLUtil >= 0.8.2
                     , Moose
                     , OpenGL >= 2.9.2.0
                     , OpenGLRaw == 1.5.0.0
                     , base >=4.7 && <4.8
                     , bytestring >= 0.10.4.0
                     , linear >= 1.18.1
  default-language:    Haskell2010
  --other-modules:       Shader

executable Ships
  hs-source-dirs:      executables/ships/
  main-is:             Main.hs
  build-depends:       GLFW-b
                     , GLUtil >= 0.8.2
                     , Moose
                     , OpenGL >= 2.9.2.0
                     , base >=4.7 && <4.8
                     , bytestring >= 0.10.4.0
                     , linear >= 1.18.1
                     , OpenGLRaw == 1.5.0.0
  default-language:    Haskell2010
                       